--- a/ZaverecnaPrace/Board.xaml
+++ b/ZaverecnaPrace/Board.xaml
@@ -8,8 +8,10 @@
         mc:Ignorable="d"
         Title="Board" Height="864" Width="1536">
     <Grid x:Name="Panel" Background="#FF3E3E3E">
-        <Grid x:Name="CardList" HorizontalAlignment="Left" Height="40" Margin="10,10,0,0" VerticalAlignment="Top" Width="250" Background="#FF7C7C7C">
-            <Button x:Name="AddCardButton" Content="+" HorizontalAlignment="Left" VerticalAlignment="Top" Height="20" Width="100" Click="AddCard" Margin="75,10,0,0"/>
-        </Grid>
+        <ScrollViewer>
+            <Grid x:Name="MainGrid">
+                <Button x:Name="AddListButton" Content="Add Card List" HorizontalAlignment="Left" Margin="0,88,0,0" VerticalAlignment="Top" Height="75" Width="400" Click="AddList"/>
+            </Grid>
+        </ScrollViewer>
     </Grid>
 </Window>
