--- a/ZaverecnaPrace/Projects.xaml
+++ b/ZaverecnaPrace/Projects.xaml
@@ -13,13 +13,28 @@
         </Grid.Background>
         <Rectangle x:Name="NavBar" HorizontalAlignment="Center" Height="100" VerticalAlignment="Top" Width="1536" Fill="#BF000000"/>
         <Label Content="Tvrello" HorizontalAlignment="Left" Margin="10,12,0,0" VerticalAlignment="Top" FontSize="50" Foreground="White"/>
-        <Label Content="ProjectName" HorizontalAlignment="Center" Margin="0,12,0,0" VerticalAlignment="Top" FontSize="50" Foreground="White"/>
+        <Label x:Name="ProjectName" Content="ProjectName" HorizontalAlignment="Center" Margin="0,12,0,0" VerticalAlignment="Top" FontSize="50" Foreground="White"/>
         <Ellipse HorizontalAlignment="Left" Height="75" Margin="1451,13,0,0" VerticalAlignment="Top" Width="75" Fill="#FFB527AF"/>
         <Label Content="VŠ" HorizontalAlignment="Left" Margin="1460,19,0,0" VerticalAlignment="Top" FontSize="40" Foreground="White"/>
-        <Rectangle HorizontalAlignment="Left" Height="600" Margin="10,150,0,0" VerticalAlignment="Top" Width="300" Fill="#B6000000"/>
 
-        <Grid Margin="415,150,100,98" Background="#BF000000">
-            <ScrollViewer x:Name="ProjectGrid"/>
+
+
+        <Grid x:Name="ProjectGrid" Background="#BF000000" Margin="87,150,1184,98">
+            <ScrollViewer>
+                <Grid>
+                    <WrapPanel x:Name="ProjectStackPanel" Grid.Row="10" Grid.Column="10" HorizontalAlignment="Center" Orientation="Horizontal" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"/>
+                </Grid>
+            </ScrollViewer>
         </Grid>
+
+        <Grid x:Name="BoardGrid" Margin="415,150,100,98" Background="#BF000000">
+            <ScrollViewer>
+                <Grid>
+                    <WrapPanel x:Name="BoardStackPanel" Grid.Row="10" Grid.Column="10" HorizontalAlignment="Center" Orientation="Horizontal" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"/>
+                </Grid>
+            </ScrollViewer>
+        </Grid>
+        <Button Content="+" HorizontalAlignment="Left" Margin="1451,150,0,0" VerticalAlignment="Top" Height="75" Width="75" FontSize="50" Click="CreateBoard"/>
+        <Button Content="+" HorizontalAlignment="Left" Margin="10,150,0,0" VerticalAlignment="Top" Height="75" Width="75" FontSize="50" Click="CreateProject"/>
     </Grid>
 </Window>
